Fix immagine + fix bg-size
fixata l'immagine che ora è circondata dalle particelle + sistemata la dimensione dello sfondo, non compare più l'orribile scrollbar di destra

--- a/views/css/main.css
+++ b/views/css/main.css
@@ -8,4 +8,5 @@ body {
 #particles-js {
     height: 100%;
     float: none;
+    background-size: auto;
 }
